tests/scan/fixtures/validation/negative/clean_npm_internal_scope_legit/.npmrc
registry=https://npm.internal.example.com/
@internal:registry=https://npm.internal.example.com/
